force-app/main/default/objects/Product2/fields/Applicable_Model__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If liked this field will replace the Applicable model text field</description>
    <inlineHelpText>If liked this field will replace the Applicable model text field</inlineHelpText>
    <label>Applicable Model</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>Applicable Model</relationshipLabel>
    <relationshipName>ApplicableModel</relationshipName>
    <type>Lookup</type>
</CustomField>