force-app/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field lookup the category table to define product category.</description>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>