force-app/main/default/objects/Product2/fields/Discontinued_Date__c.field-meta.xml
<CustomField>
    <fullName>Discontinued_Date__c</fullName>
    <label>Discontinued Date</label>
    <type>Date</type>
</CustomField>