force-app/main/default/objects/Product2/fields/Integration_YPMM_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_YPMM_Id__c</fullName>
    <externalId>true</externalId>
    <label>Integration YPMM Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>