force-app/main/default/objects/Product2/fields/Migration_Id__c.field-meta.xml
<CustomField>
    <fullName>Migration_Id__c</fullName>
    <externalId>true</externalId>
    <label>Migration Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>