force-app/main/default/objects/Product2/fields/Model_Code__c.field-meta.xml
<CustomField>
    <fullName>Model_Code__c</fullName>
    <description>This field is used to store the model code of the product.</description>
    <label>Model Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>