force-app/main/default/objects/Product2/fields/Multi__c.field-meta.xml
<CustomField>
    <fullName>Multi__c</fullName>
    <label>Multi</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GX10</fullName>
            </value>
            <value>
                <fullName>GX20</fullName>
            </value>
            <value>
                <fullName>GP10</fullName>
            </value>
            <value>
                <fullName>GP20</fullName>
            </value>
            <value>
                <fullName>GM10</fullName>
            </value>
            <value>
                <fullName>GA10</fullName>
            </value>
            <value>
                <fullName>DX1000</fullName>
            </value>
            <value>
                <fullName>DX1000N</fullName>
            </value>
            <value>
                <fullName>DX1000T</fullName>
            </value>
            <value>
                <fullName>DX2000</fullName>
            </value>
            <value>
                <fullName>DX2000T</fullName>
            </value>
            <value>
                <fullName>FX1000</fullName>
            </value>
            <value>
                <fullName>µR10000/EM1</fullName>
            </value>
            <value>
                <fullName>µR20000/EM1</fullName>
            </value>
            <value>
                <fullName>CX1000</fullName>
            </value>
            <value>
                <fullName>CX2000</fullName>
            </value>
            <value>
                <fullName>DX100</fullName>
            </value>
            <value>
                <fullName>DX100P</fullName>
            </value>
            <value>
                <fullName>DX200</fullName>
            </value>
            <value>
                <fullName>DX200P</fullName>
            </value>
            <value>
                <fullName>FX100</fullName>
            </value>
            <value>
                <fullName>MV100</fullName>
            </value>
            <value>
                <fullName>MV200</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>