force-app/main/default/objects/Product2/fields/PF__c.field-meta.xml
<CustomField>
    <fullName>PF__c</fullName>
    <label>PF</label>
    <length>10</length>
    <type>Text</type>
</CustomField>