force-app/main/default/objects/Product2/fields/PGPL__c.field-meta.xml
<CustomField>
    <fullName>PGPL__c</fullName>
    <label>PGPL</label>
    <length>10</length>
    <type>Text</type>
</CustomField>