force-app/main/default/objects/Product2/fields/PMK_Code__c.field-meta.xml
<CustomField>
    <fullName>PMK_Code__c</fullName>
    <label>PMK Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>