force-app/main/default/objects/Product2/fields/Product_Categories__c.field-meta.xml
<CustomField>
    <fullName>Product_Categories__c</fullName>
    <formula>CASE( Category__r.Category_Hierarchy__r.Category_Level__c,

4, if(Category__r.Category__r.Category__r.Name != null, Category__r.Category__r.Category__r.Name, &quot;&quot;) +

if(Category__r.Category__r.Name != null, &apos; / &apos;+Category__r.Category__r.Name +&apos; / &apos;+Category__r.Name, Category__r.Name),

&quot; &quot;)+CASE( Category__r.Category_Hierarchy__r.Category_Level__c,

3, if(Category__r.Category__r.Name != null, Category__r.Category__r.Name +&apos; / &apos;+Category__r.Name, Category__r.Name),

&quot; &quot;)+CASE( Category__r.Category_Hierarchy__r.Category_Level__c,

2, Category__r.Name,

&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Categories</label>
    <type>Text</type>
</CustomField>