force-app/main/default/objects/Product2/fields/Product_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Product_Hierarchy__c</fullName>
    <formula>BU__c +  PF__c +  PGPL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Hierarchy</label>
    <type>Text</type>
</CustomField>