force-app/main/default/objects/Product2/fields/Production_Date__c.field-meta.xml
<CustomField>
    <fullName>Production_Date__c</fullName>
    <description>This field is used to store the production date of the product.</description>
    <label>Production Date</label>
    <type>Date</type>
</CustomField>