force-app/main/default/objects/Product2/fields/Top_Category__c.field-meta.xml
<CustomField>
    <fullName>Top_Category__c</fullName>
    <description>This field is used to store the top category code of the product.</description>
    <formula>CASE(Category__r.Category_Hierarchy__r.Category_Level__c,

7, Category__r.Category_Hierarchy__r.Category_Hierarchy__r.Category_Hierarchy__r.Category_Hierarchy__r.Category_Hierarchy__r.Category_Hierarchy__r.Category_Hierarchy__r.Category_Code__c,

6, Category__r.Category_Hierarchy__r.Category_Hierarchy__r.Category_Hierarchy__r.Category_Hierarchy__r.Category_Hierarchy__r.Category_Hierarchy__r.Category_Code__c,

5, Category__r.Category_Hierarchy__r.Category_Hierarchy__r.Category_Hierarchy__r.Category_Hierarchy__r.Category_Hierarchy__r.Category_Code__c,

4, Category__r.Category_Hierarchy__r.Category_Hierarchy__r.Category_Hierarchy__r.Category_Hierarchy__r.Category_Code__c,

3, Category__r.Category_Hierarchy__r.Category_Hierarchy__r.Category_Hierarchy__r.Category_Code__c,

2, Category__r.Category_Hierarchy__r.Category_Hierarchy__r.Category_Code__c,

1, Category__r.Category_Hierarchy__r.Category_Code__c,

&quot;NULL&quot;)</formula>
    <label>Top Category</label>
    <type>Text</type>
</CustomField>