force-app/main/default/objects/Product2/fields/Vendavo_CPQ__NeedsSync__c.field-meta.xml
<CustomField>
    <fullName>Vendavo_CPQ__NeedsSync__c</fullName>
    <description>A comparison formula to see if the product needs to be synced  to the Vendavo CPQ Settings database</description>
    <formula>if(LastModifiedDate &gt; Vendavo_CPQ__SyncDate__c || ISBLANK(Vendavo_CPQ__SyncDate__c), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A comparison formula to see if the product needs to be synced  to the Vendavo CPQ Settings database</inlineHelpText>
    <label>NeedsSync</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>