force-app/main/default/objects/Product2/fields/Vendavo_CPQ__SyncDate__c.field-meta.xml
<CustomField>
    <fullName>Vendavo_CPQ__SyncDate__c</fullName>
    <description>Datestamp used by Vendavo CPQ Settings to manage product synchronization</description>
    <inlineHelpText>Datestamp used by Vendavo CPQ Settings to manage product synchronization</inlineHelpText>
    <label>SyncDate</label>
    <type>DateTime</type>
</CustomField>